Thu Mar 25 09:46:07 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/Display.cc(displayMatch): Avoid segfault when DocAnchors
	list has too few entries for current anchor number.

Tue Mar 23 15:08:40 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htsearch/Display.cc(displayMatch): Fix problem when documents
	did not have descriptions.

Tue Mar 23 14:17:14 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/PDF.cc(parseString): Use minimum_word_length instead of
	hardcoded constant.

Tue Mar 23 14:02:40 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/HTML.cc: Fix bug where noindex_start was empty, allow case
	insensitive matching of noindex_start & noindex_end.

	* htdoc/attrs.html, htdoc/cf_byname.html, htdoc/cf_byprog.html:
	Fix inconsistencies in documentation for noindex_start & noindex_end.

Tue Mar 23 14:01:16 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/HTML.cc: Add check for <a href=...> tag that is missing a
	closing </a> tag, terminating it at next href.

Tue Mar 23 13:57:35 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/Document.cc: Fix check of Content-type header in readHeader(),
	correcting bug introduced Jan 10 (for PR#91), and check against
	allowed external parsers.

Tue Mar 23 13:54:35 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htdig/HTML.cc: More lenient comment parsing, allows extra dashes.

Tue Mar 23 12:22:53 1999  Gilles Detillieux  <grdetil@scrc.umanitoba.ca>

	* htlib/Configuration.cc(Add): Fix function to avoid infinite loop
	on some systems, which don't allow all the letters in isalnum() that
	isalpha() does, e.g. accented ones.

	* htdig/HTML.cc: Fix three reported bugs about inconsistent
	handling of space and punctuation in title, href description & head.
	Now makes destinction between tags that cause word breaks and those
	that don't, and which of the latter add space.
